Fix modal view overlay: introduce use-overflow to change height

--- a/src/components/pages/edit-test-page/modal-question/modal-question.module.scss
+++ b/src/components/pages/edit-test-page/modal-question/modal-question.module.scss
@@ -2,6 +2,12 @@
 @import '/src/utils/media';
 
 .modal-question {
+	&__content {
+		@include media-mobile {
+			height: 100%;
+		}
+	}
+
 	&__answer {
 		margin-bottom: 18px;
 
