--- a/src/components/ui/overlay/overlay.module.scss
+++ b/src/components/ui/overlay/overlay.module.scss
@@ -14,16 +14,35 @@
 	height: 100%;
 	backdrop-filter: blur(6px);
 
-	&_dark-bg::after {
+	&_compact {
+		display: block;
+	}
+
+	&__dark-bg {
 		content: '';
-		position: fixed;
+		position: absolute;
 		z-index: 0;
 		top: 0;
+		right: 0;
+		bottom: 0;
 		left: 0;
-		width: 100%;
-		height: 100%;
 		display: block;
 		background-color: #303030;
 		opacity: 0.75;
+	}
+
+	&__content {
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		width: 100%;
+
+		&_compact {
+			padding: 20px;
+
+			@include media-mobile {
+				padding: 0;
+			}
+		}
 	}
 }
